--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>jgoodies</groupId>
+            <artifactId>forms</artifactId>
+            <version>1.0.5</version>
+        </dependency>
 
     </dependencies>
     
